--- a/Contents/ai-intro.tex
+++ b/Contents/ai-intro.tex
@@ -12,6 +12,7 @@
 \todo{The structure of the notes}\\
 It's important to understand that there are more to \ac{AI} and \ac{ML} than just neural networks. In the end, to create a meaningful and working neural network, I believe one should have strong background in the basics of \ac{ML} as well. Henceforth, I keep record of what I have learnt in the whole \ac{AI} field. The structure of the notes is as follows:
 \begin{itemize}
+	\item \charef{cha:overview-ml} introduces common ideas in \ac{ML}.
 	\item \charef{cha:probabilities} introduces the mathematics background on probabilities, matrix.
 	\item \todo{chapter 3} explain basic concepts, the branching of different classes in \ac{ML}. Later chapters presents each smaller branches.
 \end{itemize}
