--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -54,4 +54,17 @@
 	author={Vu, Huu~Tiep},
 	year={2018},
 }
+@article{tjaden2018,
+	author = {Tjaden, Henning and Schwanecke, Ulrich and Schömer, Elmar and Cremers, Daniel},
+	year = {2018},
+	month = {07},
+	pages = {},
+	title = {A Gauss-Newton Approach to Real-Time Monocular Multiple Object Tracking}
+}
+@book{frisiusradio,
+	title={De radio astronomico et geometrico liber},
+	year = {1545},
+	author={Frisius, Rainer Gemma},
+	publisher={Ap. Gul Cavellat}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
