--- a/Contents/probabilities.tex
+++ b/Contents/probabilities.tex
@@ -57,7 +57,7 @@ $\Rightarrow$ the \hlb{Bayes equation}:\\~\\
 \label{subsec:expectation}
 \begin{align*}
 	& \text{For variable $x$:} && \expectation{x} = \underset{x}{\sum}x.p(x) && \left( = \int x.p(x)dx \right)\\
-	& \text{For function $f(.)$:} && \expectation{f(x)} = \underset{x}{\sum}f(x).p(x) && \left( = \int f(x).p(x)dx \right)
+	& \text{For function $f(\cdot)$:} && \expectation{f(x)} = \underset{x}{\sum}f(x).p(x) && \left( = \int f(x).p(x)dx \right)
 \end{align*}
 
 \section{Types of Probability Distributions}
