--- a/learning-notes.sty
+++ b/learning-notes.sty
@@ -64,6 +64,7 @@ aboveskip 	    = 6pt
 \RequirePackage{booktabs}		 				% Nicer horizontal lines
 \RequirePackage{multirow}		 				% Divide lines and columns further
 \RequirePackage{rccol}			 				% Align columns according to the decimal point
+\RequirePackage{tabularx}
 
 % --------------------------------------------------------------------------
 %	Graphics
@@ -71,6 +72,7 @@ aboveskip 	    = 6pt
 \RequirePackage{graphicx, psfrag} 	% Incorporation of graphics
 \graphicspath{{./Contents/images}}
 \RequirePackage{subcaption}         % Sub-illustrations
+\RequirePackage{tikz}
 
 % --------------------------------------------------------------------------
 %	Mathematics-mode
