--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -2,7 +2,7 @@
 
 \chapter*{Abbreviations}
 \addcontentsline{toc}{chapter}{Abbreviations}
-\section*{General Terms}
+
 \begin{acronym}[LONGEST]
 	\acro{AI}{Artificial Intelligence}
 	\acro{ML}{Machine Learning}
@@ -11,24 +11,22 @@
 	\acro{CV}{Computer Vision}
 	\acro{RL}{Reinforcement Learning}
 	\acro{NLP}{Natural Language Processing}
-\end{acronym}
-
-\section*{Convenient Abbreviations}
-\begin{acronym}[LONGEST]
+	
 	\acro{prob}[prob.]{probability}
 	\acro{param}[params.]{parameters}
 	\acro{algor}[algor.]{algorithms}
-\end{acronym}
-
-\section*{Probabilities}
-\begin{acronym}[LONGEST]
+	\acro{info}[info.]{information}
+	\acro{aka}[a.k.a.]{also known as}
+	\acro{no}[no.]{number of}
+	\acro{func}[func.]{function}
+	\acro{vs}[vs.]{versus}
+	\acro{iid}[i.i.d.]{independent \& identically distributed}
+	\acro{LSI}{linear shift invariant}
+	
 	\acro{pdf}[PDF]{Probability Density Function}
 	\acro{MLE}{Maximum Likelihood Estimation}
 	\acro{MAP}{Maximum A Posteriori}
-\end{acronym}
 
-\section*{Machine Learning related terms}
-\begin{acronym}[LONGEST]
 	\acro{MoG}{Mixture of Gaussians}
 	
 	% Gradient descent
@@ -36,6 +34,7 @@
 	\acro{rmsprop}[RMSprop]{Root mean squared prop}
 	\acro{adam}[Adam]{Adaptive moment estimation}
 	
+	\acro{SVD}{Singular Value Decomposition}
 	\acro{PCA}{Principal Component Analysis}
 	\acro{LDA}{Linear Discriminant Analysis}
 	\acro{kl}[K-L]{Kullback–Leibler}
