--- a/Contents/ml-intro.tex
+++ b/Contents/ml-intro.tex
@@ -1,5 +1,6 @@
 % !TeX spellcheck = en_US
 \chapter{Overview of Machine Learning}
+\label{cha:overview-ml}
 
 A machine learning algorithm is an algorithm that has the ability to \textit{learn} from the data. A computer program is said to \textbf{learn}, if its performance at tasks in $T$, measured by $P$, improves with experience $E$ (in which the experience is equivalent to the data). \cite{goodfellow2016deep}
 
@@ -12,7 +13,39 @@ The task is to specify a label for the given data point. The labels are usually 
 \Eg, in the problem of digit classification, the data point is images of hand-written numbers. The data set comes with their labels as well. The task is then, given a unseen image, the model would be able to tell which number is in that image. In this problem, there are 10 possible labels, \ie, $0, 1, \dots, 9$.
 
 \subsection{Regression}
+If the desired output is a real value, instead of a label in a list, then it's a regression problem. \Eg:
+\begin{itemize}
+	\item with an image as the input data, the model predicts the age of the person
+	\item given a feature vector, the model generates an image
+\end{itemize}
+
+\subsection{Clustering}
+This is the task of grouping relevant data points based on some relationship between them.
+
+\Eg, find the pattern in customer shopping behaviors.
+
+\subsection{Others}
+Some worth-mentioning tasks:
+\begin{itemize}
+	\item Recommendation System
+	\item Machine Translation
+	\item Completion
+	\item Ranking
+	\item Information Retrieval
+	\item Denoising
+\end{itemize}
+
+\section{Performance $P$}
+Usually, the dataset is divided into \textit{training set} and \textit{test set}. The model uses the training set to tune \ update the model \ac{param} and the test set to examine the performance.
+
+\textit{Online training} is the approach when new data will continuously arise and introduce for the model to learn. \Eg in \ac{RL}. \textit{Offline training} is the opposite, the model learns from the a fixed training set.
 
 \section{Experience $E$}
-\section{Performance $P$}
+\subsection{Supervised Learning}
+Supervised Learning is the approach that predict the outputs of new data points based on pairs of known inputs and outputs. This is the most common type of \ac{ML} \ac{algor}.
+\subsection{Unsupervised Learning}
+On the opposite, with unsupervised Learning, there is no known output, just inputs. Unsupervised Learning \ac{algor} will carry on some tasks based on the characteristics of the dataset, \eg clustering, dimension reduction.
 
+\section{Model Parameters and Loss Function}
+\label{sec:model-param-loss}
+Each \ac{ML} model is described by a set of model \ac{param}. \Eg, in the problem of finding a line passing through points in the 2D plane, the model \ac{param} are $a, b$ in the line equation $y=ax+b$. The of training aim is to find the model \ac{param} that leads to the best performance. For classification problems, it means having the least number of incorrect classified data points. For regression problems, it means having the smallest difference with the actual output. It is then equivalent to having a optimization problem, in which we try to minimize a loss/cost function.
